test JS scripts

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>Page Title</title>
-    <script src="./scripts/sharepoint.js"></script>
+    <!-- <script src="./scripts/sharepoint.js"></script> -->
+    <script src="./scripts/test.js"></script>
 
 </head>
 <body>
