--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
             i++;
             var str_test ="test:" + i ;
             console.log(str_test );
+            // test // 
+
+            // test // 
             document.getElementById("p1").innerHTML = str_test;
         }
     </script>
